--- a/00-demostration/package.json
+++ b/00-demostration/package.json
@@ -5,7 +5,7 @@
     "client": "node client.mjs",
     "server": "node server.mjs",
     "inspector": "npx @modelcontextprotocol/inspector ./server-mcp-weather",
-    "build": "esbuild --bundle --platform=node --target=node22 --minify --outfile=bundle.js --format=cjs server.cjs",
+    "build": "esbuild --bundle --platform=node --target=node22 --minify --outfile=bundle.js --format=cjs server.js",
     "build-linux": "./make_linux.sh",
     "build-windows": "./make_windows.sh"
   },
