--- a/04-api-mcp/server/package.json
+++ b/04-api-mcp/server/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "5.1.0"
+    "express": "5.1.0",
+    "multer": "2.0.2"
+  },
+  "devDependencies": {
+    "@types/multer": "^2.0.0"
   }
 }
